[package]
name = "async-fuse"
edition = "2018"
version = "0.1.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>", "James Pan <jiaming.pan@gmail.com>"]
description = "Async Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/jmpq/async-fuse-rs"
repository = "https://github.com/jmpq/async-fuse-rs"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings", "async"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
cirrus-ci = { repository = "jmpq/async-fuse-rs" }
github = { repository = "jmpq/async-fuse-rs" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.1.0-dev" }
fuse-sys = { path = "./fuse-sys", version = "=0.1.0-dev" }
libc = "0.2.51"
log = "0.4.6"
async-trait = "0.1.38"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
env_logger = "0.6.0"

[features]
default = ["abi-7-19"]
abi-7-9 = [ "fuse-abi/abi-7-9"]
abi-7-10 = ["abi-7-9", "fuse-abi/abi-7-10"]
abi-7-11 = ["abi-7-10", "fuse-abi/abi-7-11"]
abi-7-12 = ["abi-7-11", "fuse-abi/abi-7-12"]
abi-7-13 = ["abi-7-12", "fuse-abi/abi-7-13"]
abi-7-14 = ["abi-7-13", "fuse-abi/abi-7-14"]
abi-7-15 = ["abi-7-14", "fuse-abi/abi-7-15"]
abi-7-16 = ["abi-7-15", "fuse-abi/abi-7-16"]
abi-7-17 = ["abi-7-16", "fuse-abi/abi-7-17"]
abi-7-18 = ["abi-7-17", "fuse-abi/abi-7-18"]
abi-7-19 = ["abi-7-18", "fuse-abi/abi-7-19"]
